# coda-fb

./: .gitignore  BUILD_FIXES.md  CODE_DOCUMENTATION_SUMMARY.md  COMMAND_LINE_USAGE.md  COMPILATION_FIXES_SUMMARY.md  E2SAR_API_CHANGES.md  ET_CONNECTION_GUIDE.md  ET_LIBRARY_SETUP.md  EVIO6_STRUCTURE_ANALYSIS.md  EVIO_PARSER_README.md  FILE_OUTPUT_GUIDE.md  FRAMEBUILDER_README.md  FRAMEBUILDING_CHANGES.md  FRAMEBUILDING_USAGE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION.md  INTEGRATION_EXAMPLE.md  LICENSE  MULTITHREADED_DESIGN.md  Makefile.evio_parser  PAYLOAD_PARSING.md  README.md  README_FRAMEBUILDER.md  framebuilding.patch  meson.build  meson_options.txt  test_framebuilding.sh
scripts/: README.md  build.sh  example_parse.sh  example_run.sh
src/: coda-fb.cpp  e2sar_reassembler_framebuilder.cpp  e2sar_reassembler_framebuilder.hpp  e2sar_receiver.cpp
src/parser/: evio_event_parser.cpp
