# Build options for E2SAR Standalone Receiver

option('numa_support', type: 'feature', value: 'auto',
       description: 'Enable NUMA memory binding support')

option('affinity_support', type: 'feature', value: 'auto', 
       description: 'Enable CPU affinity binding support')

option('install_examples', type: 'boolean', value: false,
       description: 'Install example scripts and configuration files')